# fp

./: .gitignore  LICENSE.md  README.md  example.py  funprogram.py  pyproject.toml  requirements.txt  setup.py
.github/: build.sh
.github/workflows/: build.yaml  examples.yaml  test.yaml  tests.yaml
docs/: conf.py  index.rst  installation.rst  requirements.txt
docs/API/: cartesian.rst  instances.rst  meta.rst  modules.rst  tensors.rst
docs/manual/: functors.rst  install.rst  monads.rst  natural.rst  quickstart.rst  tens.rst  toc.rst  type.rst
examples/: arrays.py  backend.py  barbaz.py  foobar.py  lifts.py  state.py  structs.py  tensors.py  writer.py
fp/: __init__.py  arrow.py  functor.py  instances.py  list.py  meta.ipynb  meta.py
fp/base/: __init__.py  algebra.py  list.py  num.py  str.py  struct.py
fp/cartesian/: __init__.py  arrow.py  either.py  hom.py  method.py  prod.py
fp/instances/: __init__.py  algebra.py  arrow.py  async_io.py  either.py  hom.py  lifts.py  list.py  num.py  prod.py  shape.py  state.py  stateful.py  str.py  string.py  struct.py  tens.py  tensor.py  tensor_mod.py  wrap.py  writer.py
fp/io/: __init__.py  asserts.py  cast.py  checks.py  docs.py  exceptions.py  log.py  show.py
fp/meta/: __init__.py  _arrow.py  alg.py  algebra.py  arrow.py  cartesian.py  constructor.py  func.py  functor.py  hom.py  kind.py  lifts.py  method.py  monad.py  prod.py  type.py  type_class_method.py
test/: test_arrow.py  test_functor.py  test_hom.py  test_list.py  test_num.py  test_otimes.py  test_tens.py  test_tensor.py  test_type.py  test_typevar.py  test_wrap.py
tests/: .gitignore  test_async_io.py  test_hom.py  test_meta.py  test_method.py  test_prod.py  test_state.py  test_stateful.py  test_struct.py  test_tensor.py  test_type.py  test_var.py
(+39 files in other folders)
