[tool.poetry]
name = "funprogram"
version = "0.9.2"
description = "A functional programming framework for python."
authors = ["Olivier Peltre <opeltre@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include="fp"}]

[project.urls]
Homepage = "https://github.com/opeltre/fp"
Documentation = "https://funprogram.readthedocs.io/en/latest"

[tool.poetry.dependencies]
python = "^3.11"
poethepoet = "*"
colorama = "^0.4.6"
numpy = "^1.26"
jax = { version = "^0.4", optional = true }

[tool.poetry.extras]
jax = ["jax"]

[tool.poetry.scripts]
#fp-tests = 'echo test'
#fp-tests = 'fp.scripts.tests:main'

[tool.poe.tasks.torchinstall]
cmd = "pip install torch --index-url https://download.pytorch.org/whl/cpu"

[tool.poe.tasks.jaxinstall]
cmd = "pip install 'jax[cpu]'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
